# freezer

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CHANGES.rst  CREDITS.rst  ChangeLog  FAQ.rst  HACKING.rst  INSTALL.rst  LICENSE  LICENSE.rst  MANIFEST  MANIFEST.in  README.rst  bindep.txt  lower-constraints.txt  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
config-generator/: scheduler.conf
devstack/: README.rst  gate_hook.sh  local.conf.example  plugin.sh  settings
devstack/lib/: freezer
doc/: .gitignore  README.rst  requirements.txt
doc/source/: conf.py  index.rst
etc/: scheduler.conf.sample
freezer/: __init__.py  arguments.py  backup.py  bandwidth.py  cinder.py  config.py  exec_cmd.py  glance.py  job.py  local.py  lvm.py  main.py  osclients.py  restore.py  ssh.py  storage.py  streaming.py  swift.py  tar.py  utils.py  validator.py  vss.py  winutils.py
freezer/apiclient/: actions.py  backups.py  client.py  configs.py  exceptions.py  jobs.py  registration.py  sessions.py
freezer/common/: client_manager.py  config.py
freezer/engine/: engine.py  exceptions.py  manager.py  tar_engine.py
freezer/exceptions/: engine.py  utils.py
freezer/mode/: cinder.py  cindernative.py  default.py  fs.py  glance.py  mode.py  mongo.py  mysql.py  nova.py  sqlserver.py
freezer/openstack/: admin.py  backup.py  openstack.py  osclients.py  restore.py
freezer/scheduler/: arguments.py  daemon.py  shell.py  (+5 more)
freezer_api/: .coveragerc  README.rst  requirements.txt  setup.cfg  tox.ini
freezer_api/etc/: freezer-api.conf
freezer_api/freezer_api/api/: versions.py
freezer_api/freezer_api/api/common/: middleware.py
freezer_api/freezer_api/api/v1/: __init__.py  actions.py  backups.py  clients.py  configs.py  homedoc.py  jobs.py  sessions.py
freezer_api/freezer_api/cmd/: api.py  db_init.py
freezer_api/freezer_api/common/: _i18n.py  config.py  db_mappings.py  exceptions.py  json_schemas.py  log.py  utils.py
freezer_api/freezer_api/storage/: driver.py  elastic.py  simpledict.py
freezer_api/specs/: Freezer API spec.odt  Freezer-API-spec.rst
freezer_api/tests/: common.py  test_actions.py  test_api.py  test_backups.py  test_clients.py  test_db_init.py  test_driver.py  test_elastic.py  test_exceptions.py  test_homedoc.py  test_jobs.py  test_middleware.py  test_sessions.py  test_utils.py  test_versions.py
horizon_web_ui/: .pylintrc  MANIFEST.in  README.rst  _50_devfreezer.py  _50_freezer.py  manage.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
horizon_web_ui/devfreezer/: dashboard.py
horizon_web_ui/devfreezer/freezerweb/: panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
horizon_web_ui/devfreezer/freezerweb/templates/freezerweb/: index.html
horizon_web_ui/devfreezer/static/devfreezer/css/: devfreezer.css
horizon_web_ui/devfreezer/static/devfreezer/js/: devfreezer.js
horizon_web_ui/devfreezer/templates/devfreezer/: base.html
horizon_web_ui/freezer/: dashboard.py
horizon_web_ui/freezer/freezerpanel/: browsers.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
horizon_web_ui/freezer/freezerpanel/templates/freezerpanel/: container.html  index.html
horizon_web_ui/freezer/static/mydashboard/css/: mydashboard.css
horizon_web_ui/freezer/static/mydashboard/js/: mydashboard.js
horizon_web_ui/freezer_ui/: dashboard.py  django_utils.py  urls.py  utils.py
horizon_web_ui/freezer_ui/actions/: panel.py  tables.py  urls.py  views.py
horizon_web_ui/freezer_ui/actions/templates/actions/: index.html
horizon_web_ui/freezer_ui/api/: api.py
horizon_web_ui/freezer_ui/api/rest/: rest_api.py  urls.py
horizon_web_ui/freezer_ui/backups/: panel.py  restore_workflow.py  tables.py  urls.py  views.py
horizon_web_ui/freezer_ui/backups/templates/backups/: detail.html  index.html  restore.html
horizon_web_ui/freezer_ui/backups/workflows/: restore.py
horizon_web_ui/freezer_ui/configurations/: browsers.py  panel.py  tables.py  urls.py  utils.py  views.py
horizon_web_ui/freezer_ui/configurations/templates/configurations/: browser.html
horizon_web_ui/freezer_ui/configurations/workflows/: configure.py
horizon_web_ui/freezer_ui/jobs/: browsers.py  panel.py  tables.py  urls.py  views.py
horizon_web_ui/freezer_ui/jobs/templates/jobs/: _action.html  _actions.html  _advanced.html  _info.html  _rules.html  _scheduling.html  _snapshot.html  browser.html  snapshot.html
horizon_web_ui/freezer_ui/jobs/workflows/: action.py  configure.py
horizon_web_ui/freezer_ui/overview/: __init__.py  panel.py  urls.py  views.py
horizon_web_ui/freezer_ui/overview/templates/overview/: overview.html
horizon_web_ui/freezer_ui/sessions/: browsers.py  panel.py  tables.py  urls.py  views.py
horizon_web_ui/freezer_ui/sessions/templates/sessions/: _info.html  browser.html
horizon_web_ui/freezer_ui/sessions/workflows/: attach.py  create_session.py
horizon_web_ui/freezer_ui/static/freezer/css/: freezer.css
horizon_web_ui/freezer_ui/static/freezer/js/: dashboard.js  freezer.actions.action.js  freezer.actions.advanced.js  freezer.actions.snapshot.js  freezer.jobs.js  freezer.jobs.sortable.js  freezer.js  freezer.restore.js
horizon_web_ui/freezer_ui/templates/freezer/: base.html
horizon_web_ui/freezer_ui/tests/: api_tests.py  rest_api_tests.py  settings.py
specs/: integration_test_procedure.rst  job-backup.conf.example  python-freezerclient.rst  template.rst  tenant_based_backups.rst
tests/: commons.py  test_apiclient_actions.py  test_apiclient_backup.py  test_apiclient_client.py  test_apiclient_exceptions.py  test_apiclient_jobs.py  test_apiclient_registration.py  test_apiclient_sessions.py  test_arguments.py  test_backup.py  test_bandwidth.py  test_config.py  test_exec_cmd.py  test_job.py  test_local.py  test_lvm.py  test_main.py  test_osclients.py  test_restore.py  test_scheduler_arguments.py  test_scheduler_daemon.py  test_storage.py  test_swift.py  test_tar.py  test_tar_builders.py  test_utils.py  test_validator.py  test_vss.py  test_winutils.py
(+240 files in other folders)
