[metadata]
name = freezer
author = Freezer Team
author-email = openstack-dev@lists.openstack.org
summary = The OpenStack Backup Restore and Disaster Recovery as a Service Platform
description-file = README.rst
home-page = https://wiki.openstack.org/wiki/Freezer
license = Apache-2
classifier =
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving
keywords =
    freezer
    backup
    openstack
    restore
    disaster recovery
    lvm
    snapshot
    mongodb
    mysql

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[files]
packages =
    freezer
data_files =
    freezer/scripts = freezer/scripts/vss.ps1

[entry_points]
oslo.config.opts =
    freezer = freezer.common.config:list_opts
    scheduler = freezer.scheduler.arguments:list_opts
console_scripts =
    freezer-scheduler = freezer.scheduler.freezer_scheduler:main
    freezer-agent = freezer.main:main
tempest.test_plugins =
    freezer_tempest_tests = freezer.tests.freezer_tempest_plugin.plugin:FreezerTempestPlugin


[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True

# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
