[metadata]
name = freezer
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = The OpenStack Backup Restore and Disaster Recovery as a Service Platform
description_file = README.rst
home_page = https://docs.openstack.org/freezer/latest/
license = Apache-2
python_requires = >=3.8
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving
keywords =
    freezer
    backup
    openstack
    restore
    disaster recovery
    lvm
    snapshot
    mongodb
    mysql

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    freezer
data_files =
    freezer/scripts = freezer/scripts/vss.ps1

[entry_points]
oslo.config.opts =
    freezer-agent = freezer.common.config:list_opts
    freezer-scheduler = freezer.scheduler.arguments:list_opts
console_scripts =
    freezer-scheduler = freezer.scheduler.freezer_scheduler:main
    freezer-agent = freezer.main:main


