[metadata]
name = freezer_api

version = 2015.1

summary = OpenStack Backup and Restore Service
description-file =
    README.rst

author = Fausto Marzi, Fabrizio Fresco, Fabrizio Vanni,
author_email = fausto.marzi@hp.com, fabrizio.vanni@hp.com, fabrizio.fresco@hp.com

home-page = https://github.com/stackforge/freezer
classifier =
    Environment :: OpenStack
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving

[files]
packages =
    freezer_api
data_files =
    /etc = etc/*

[entry_points]
console_scripts =
    freezer-api = freezer_api.cmd.api:main

[pytests]
where=tests
verbosity=2

[pbr]
warnerrors = True
