[metadata]
name = freezer-web-ui
author = Fabrizio Fresco, Fausto Marzi, Jonas Pfannschmidt, Guillermo Ramirez-Garcia 
author-email = openstack-dev@lists.openstack.org
summary = Freezer - Backup as a Service User Inteface
description-file = README.rst
home-page = https://launchpad.net/freezer
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP
keywords =
    horizon
    freezer
    backup
    openstack
[files]
packages =
    freezer_ui
